[package]
name = "systemicons"
version = "0.8.0"
description = "With this lib you can retrive the system icon which is associated to a certain file extension. The icon will be in the .png format. Only Windows is supported."
authors = [
    "Uwe Riegel <uriegel@hotmail.de>",
    "Victor Aremu <victor.olorunbumi@gmail.com>",
    "Jeremy Soller <jeremy@system76.com>",
    "David Jimenez <dubisdev@gmail.com>"
]
edition = "2021"
license = "MIT"
repository = "https://github.com/RokiiApp/systemicons"
readme = "README.md"

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winit = "0.25"
image = "0.23"

[dev-dependencies]
tokio = { version = "1.8", features = ["full"] }
warp = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
